@@ -1,5 +1,5 @@
 /*
- * $Id: vadduser.c,v 1.8.2.1 2006-01-17 18:50:22 tomcollins Exp $
+ * $Id: vadduser.c,v 1.8.2.2 2006-06-29 19:14:03 tomcollins Exp $
  * Copyright (C) 1999-2004 Inter7 Internet Technologies, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
@@ -82,7 +82,7 @@ int main(int argc,char **argv)
     if ( (NoPassword == 0) && (*Crypted == '\0') ) {
         if ( *Passwd == '\0' ) {
             /* Prompt the user to enter a password */
-            snprintf(Passwd, sizeof(Passwd), "%s", vgetpasswd(Email));
+	    vgetpasswd(Email, Passwd, sizeof(Passwd));
         }
 
         if ( *Passwd == '\0' ) {
